@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1156 2012/12/22 06:30:59 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1157 2012/12/22 09:14:27 zmedico Exp $
+
+  22 Dec 2012; Zac Medico <zmedico@gentoo.org> metadata.xml,
+  portage-2.1.11.31.ebuild, portage-2.1.11.38.ebuild, portage-2.1.6.7_p1.ebuild,
+  portage-2.2.0_alpha142.ebuild, portage-2.2.0_alpha149.ebuild,
+  portage-9999.ebuild:
+  Replace USE=pypy1_9 with pypy2_0.
 
   22 Dec 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.37.ebuild,
   -portage-2.1.11.9.ebuild, -portage-2.2.0_alpha148.ebuild:
